format: reformat package